# VC4CLStdLib

./: .gitignore  CMakeLists.txt  Readme.md
doc/: NumericalCompliance.md  StandardLibrary.md  TODO.txt
experimental/: CMakeLists.txt  cbrt.cl  compare_implementations.cpp  exp.cl  fma.cl  identity.cl  log.cl
include/: VC4CLStdLib.h  _async.h  _atomics.h  _clcxx_mangling.h  _common.h  _config.h  _conversions.h  _extensions.h  _flags.h  _float_float.h  _geometric.h  _images.h  _integer.h  _intrinsics.h  _math.h  _operators.h  _overloads.h  _printf.h  _relational.h  _spir_mangling.h  _synchronization.h  _vector.h  _work_items.h  defines.h  opencl-c.h
